# embedded-downloader

./: README.md  setup.cfg
src/embedded_downloader/: downloader.py
