[metadata]
name = embedded_downloader
version = 1.0
author = Rob Weber
author_email = robweberjr@gmail.com
description = A simple video downloader application to pull in videos from a url, or list of urls
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robweber/embedded-downloader
project_urls =
  Bug Tracker = https://github.com/robweber/embedded-downloader/issues
classifiers =
  Development Status :: 5 - Production/Stable
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License

[options]
install_requires =
  configargparse
  youtube-dl
package_dir =
  = src
packages = find_namespace:
python_requires = >=3.7

[options.entry_points]
console_scripts =
  embedded-video-downloader = embedded_downloader.downloader:main

[options.packages.find]
  where = src

[options.extras_require]
dev =
  flake8

[flake8]
max-line-length = 150
